--- a/starter-code/css/main.css
+++ b/starter-code/css/main.css
@@ -4,7 +4,94 @@ dark blue: #06365f
 light blue: #1c5380
 */
 
+/* structure stuff */
+
 body {
   font: 200 16px/1.5 "Helvetica Neue", Helvetica, Arial, sans-serif;
-  margin: 0;
+  margin: 0 auto;
+  width: 100%;
+  background-image: url("../images/bgtile.png");
+  background-repeat: repeat-x;
+}
+
+.wrapper{
+  width: 980px;
+  margin: 100px auto;
+}
+
+
+.left-side{
+  float: left;
+}
+
+.right-side{
+  float: right;
+}
+
+/* the right side content*/
+
+.login-button {
+  display: inline-block;
+  background-image: url("../images/home.png");
+  background-repeat: no-repeat;
+  background-position: center left 10px;
+  background-color: #1c5380;
+  color:white;
+  height: 40px;
+  width: 100px;
+  text-align: right;
+  padding-right: 10px;
+  border: 1px solid #06365f;
+  margin-top: 20px;
+  margin-right: 10px;}
+
+
+.container-box{
+  background-image: url("../images/frame.png");
+  background-repeat: no-repeat;
+  background-size: 575px;
+  width: 575px;
+}
+
+.container-box-content{
+  padding-top: 10px;
+  padding-left: 60px;
+  padding-right: 60px;
+}
+
+.container-box-content img{
+  margin-right: 15px;
+  margin-top: 15px;
+}
+
+.container-box h1{
+  color: #06365f;
+}
+
+/* the footer */
+
+footer{
+  width: 850px;
+  margin: auto;
+  padding-top: 70px;
+  clear:both;
+}
+
+footer li{
+  display: inline-block;
+  margin-right: 20px;
+  float: left;
+}
+
+footer a{
+  text-decoration: none;
+  color: #1c5380;
+  text-transform: uppercase;
+  font-weight: bold;
+}
+
+.copyright{
+  color: #CCCCCC;
+  text-transform: uppercase;
+  font-weight: bold;
 }
