--- a/starter-code/css/main.css
+++ b/starter-code/css/main.css
@@ -5,21 +5,47 @@ light blue: #1c5380
 */
 
 body {
-  height: 100px;
-  background-position: top;
+  height: 100%;
+  position: absolute;
+  width: 100%;
   font: 200 16px/1.5 "Helvetica Neue", Helvetica, Arial, sans-serif;
   margin: 0;
-  background-color: white;
 }
 
 .backgroundDivide {
+  position: relative;
   display:block;
-  border: 1px;
-  background-color: blue;
-  height: 240%;
+  height: 500px;
+  width: 100%;
+  background: linear-gradient(180deg,#1c5380 50%, white 50%);
+  background-repeat: no-repeat;
+  
 }
 
+.brand {
+  position:absolute;
+  right:300px;
+  bottom:300px;
+}
 
+.button {
+  position: absolute;
+  left:500px;
+  top:140px;
+  float: top;
+  width:75px;
+  height:20px;
+  background-color: #06365f;
+  padding: 10px 10px;
+  text-align: left;
+  -webkit-text-fill-color: white;
+}
+
+.home {
+  width:25px;
+  height:25px;
+  
+}
 
   
 
