--- a/starter-code/css/main.css
+++ b/starter-code/css/main.css
@@ -115,9 +115,9 @@ body {
 
 
 .head #celulares{
-  position: relative;
+  position: absolute;
   top: 145px;
-  right: -250px;
+  right: 676px;
 
 }
 
