--- a/starter-code/css/main.css
+++ b/starter-code/css/main.css
@@ -4,7 +4,69 @@ dark blue: #06365f
 light blue: #1c5380
 */
 
+.header {
+  background-color: #06365f;
+  height: 250px;
+}
+
+.subHeader {
+  color: #1c5380;
+  margin: 16px;
+}
+
+.textBox .innerBox {
+  border-style: solid;
+  border-color: white;
+  width: 450px;
+  height: 350px;
+  margin: 0 auto;
+  background-color: white;
+  border-radius: 8px;
+  margin-top: -100px;
+}
+.text {
+  margin: 16px;
+}
+
+.instagramLogo {
+  width: 240px;
+  position: relative;
+  bottom: 100px;
+}
+
+.content {
+  display: flex;
+  justify-content: center;
+}
+
+.twoPhones {
+  margin-top: -155px;
+  margin-right: 40px;
+}
+
+.logInButton {
+  position: relative;
+  bottom: 120px;
+  left: 140px;
+  background-color: #1c5380;
+  color: white;
+  border: #06365f;
+}
+
 body {
   font: 200 16px/1.5 "Helvetica Neue", Helvetica, Arial, sans-serif;
   margin: 0;
+}
+
+.badges {
+  margin-left: 10px;
+}
+
+.footer {
+  text-align: center;
+  margin-bottom: 45px;
+  margin-top: 44px;
+  text-decoration-line: none;
+  color: #1c5380;
+  padding-right: 10px;
 }
