--- a/starter-code/css/main.css
+++ b/starter-code/css/main.css
@@ -6,5 +6,94 @@ light blue: #1c5380
 
 body {
   font: 200 16px/1.5 "Helvetica Neue", Helvetica, Arial, sans-serif;
-  margin: 0;
+  max-width: 1000px;
+  margin: 150px auto ;
+}
+p {
+  width: 450px;
+  padding-left: 50px;
+  font-family: Helvetica;
+  font-weight: 400;
+  color: #585859;
+}
+h1{
+  width: 400px;
+  color: #06365f;
+  padding-left: 50px;
+  padding-top: 10px;
+}
+img {
+  display: inline-block;
+}
+footer{
+  clear: left;
+  margin-left: 140px;
+}
+footer a{
+  display: inline-block;
+  margin-top: 40px;
+  padding:0px  10px;
+  text-decoration: none;
+  font-weight: 600;
+  color: #406183;  
+}
+.copyright{
+  color: #b6b6b6;
+  font-weight: 600;
+  padding-left: 20px;
+}
+
+.background-blue{
+  background: linear-gradient(to bottom, #406183,  40%, white 40%);
+}
+.right-box{
+  display: inline-block;
+  background: url(../images/frame.png);
+  background-size: 100%;
+  width: 550px;
+  background-repeat: no-repeat;
+  vertical-align: top;
+  margin-left: 65px;
+  margin-top: 25px;
+}
+
+.logo {
+  display: inline-block;
+  margin-left: 70px;
+  vertical-align: top;
+}
+.home {
+  display:inline-block;
+	width:100px;
+	border:1px solid #006;
+	padding:10px 20px 1px 1px;
+  margin-top: 15px;
+  margin-left: 100px;
+	text-align:center;
+  
+	background-color: #6181a1;
+	text-decoration:none;
+	border-radius:5px;
+	border-color: #406385;
+  background-image:url("../images/home.png");
+	background-repeat:no-repeat;
+	background-position:10px 10px;
+}
+.home span{
+  padding-left: 40px;
+  padding-bottom: 10px;
+	display:inline-block;
+  color:#dfe6ec;
+  font-weight: 800;
+}
+.phone{
+  float: left;
+  width: 340px;
+}
+.ios-logo{
+  padding-left: 45px;
+  padding-top: 12px;
+}
+.google-logo{
+  padding-left: 20px;
 }
