--- a/starter-code/css/main.css
+++ b/starter-code/css/main.css
@@ -8,3 +8,90 @@ body {
   font: 200 16px/1.5 "Helvetica Neue", Helvetica, Arial, sans-serif;
   margin: 0;
 }
+.container{
+  background-color: #1c5380;
+  height: 250px;
+  position: relative;
+}
+.phone{
+  position: absolute;
+  margin-top: 50px;
+  margin-left: 220px;
+}
+.insta{
+ position: absolute;
+ margin-top: 70px;
+ margin-left: 650px; 
+}
+.home{
+  position: absolute;
+  margin-top: 85px;
+  margin-left: 1055px;
+  background-color:rgb(79,124,160);
+  border-color: rgb(45,90,130);
+  color: white;
+  cursor: pointer;
+  padding: 5px 10px 8px 10px;
+  border: 2px solid #06365f;
+  text-align: center;
+  vertical-align: middle;
+  border-radius: 0.3rem;
+}
+.frame{
+  background-image: url("../images/frame.png");
+  position: absolute;
+  margin-top: 180px;
+  margin-left: 650px;
+  background-repeat: no-repeat;
+  width: 50%;
+  height: 100%;
+}
+h1{
+  position: absolute;
+  margin-top:20px;
+  margin-left: 40px;
+  color: #06365f;
+  font-size: 28px;
+  font-weight: bold;
+  line-height: 30px;
+}
+p{
+  position: absolute;
+  margin-top:100px;
+  margin-left: 40px;
+  margin-right: 205px;
+  font-size: 16px;
+}
+#a{
+  margin-top: 160px;
+}
+#b{
+  margin-top: 270px;
+}
+.apple{
+  position: absolute;
+  margin-top:320px;
+  margin-left: 40px;
+}
+.android{
+  position: absolute;
+  margin-top:320px;
+  margin-left: 230px;
+}
+footer{
+  margin-top: 340px;
+  margin-bottom: 20px;
+  text-align: center;
+}
+a{
+  text-decoration: none;
+  color: #1c5380;
+  font-weight: bold;
+  padding-left: 10px;
+}
+.copy{
+margin-left: 10px;
+color: gray;
+font-weight: bold;
+font-size: 14px;
+}
