--- a/starter-code/css/main.css
+++ b/starter-code/css/main.css
@@ -8,3 +8,146 @@ body {
   font: 200 16px/1.5 "Helvetica Neue", Helvetica, Arial, sans-serif;
   margin: 0;
 }
+/*Main container for all HTML elements - Centers main content
+Use position relative to be able to use position absolute on the other elements*/
+#container
+{
+  margin-right: auto; 
+  margin-left:  auto;  
+  max-width: 1090px; 
+  max-height:730px;  
+  padding: 0px 10px;
+  position: relative;  
+}
+/*Page is divided in three sections - top content; bottom content and footer */
+#top-content
+{
+  background-color:#06365f;
+  height:260px;
+  margin:0px;  
+}
+#bottom-content
+{  
+  background-color: white;
+  height:340px;
+  margin:0px;
+}
+footer{
+  background-color: white;
+  height:50px;
+  margin:0px;
+  font-size: 10px;
+  text-align: center;
+}
+#phone-image
+{
+  position: absolute;
+  top: 120px; 
+  left:180px;
+  height:420px;
+  width: 258px;   
+}
+#phone-image img{
+  max-height: 100%;
+  max-width: 100%;
+}
+#logo{
+  position: absolute;
+  width:400px;
+  height:80px;
+  top: 130px;
+  left:550px;  
+}
+.logo-image{
+  width:75%;
+  height:80px;
+  float:left;  
+}
+.logo-image img{   
+  margin:0px;
+  padding: 0px;
+  max-height:80%;
+  max-width:80%;
+}
+.login-btn{
+  box-sizing:border-box;
+  text-align:right;
+  float:right;
+  width:25%; 
+  height:80px; 
+  padding: 20px 0;   
+}
+.login-btn a{  
+  color:white;
+  text-decoration: none;
+  font-weight:bold;
+  font-size: 12px;
+  background-color:#1c5380;
+  padding:10px 10px 10px 30px;  
+  border-radius: 3px;  
+  background-image: url("../images/home.png");
+  background-size:30%;
+  background-repeat: no-repeat;
+  background-position-y: center;
+  background-position-x: 5px;
+}
+#description
+{
+  position: absolute;
+  width:410px;
+  height:220px;
+  top: 210px;
+  left:550px;
+  background-image: url("../images/frame.png");
+  background-size: cover;
+  background-repeat: no-repeat;
+  padding: 10px 30px;
+  font-size:12px;
+  font-weight: normal;
+  box-sizing:border-box;
+}
+#description h2{
+  color:#06365f;
+}
+#buttons{
+  position:absolute;
+  width:380px;
+  height:40px;
+  padding:0px 0px 0px 20px;
+  top:490px;
+  left:550px;  
+}
+.img-apps
+{
+  width:80px;
+  height:40px;  
+}
+.img-apps img{
+  max-width: 100%;
+  max-height: 100%;
+}
+footer ul {
+  display:inline;
+  list-style: none;
+  margin:0px;      
+}
+footer ul li{
+  display: inline-block;
+  padding:5px;
+}
+footer ul li a {
+  display: inline-block;
+  text-transform: uppercase;
+  text-decoration: none; 
+  font-weight: bold;
+  color:#06365f;  
+}
+footer a:visted {
+  color:#06365f;
+}
+.copyright{
+  text-transform: uppercase;
+  color: #999; 
+  margin-left:10px; 
+}
+
