--- a/starter-code/css/main.css
+++ b/starter-code/css/main.css
@@ -1,47 +1,91 @@
+html{
+  width:1090px;
+  height:731px;
+}
 body{
-  height:780px;
-  width:1080px;
+  font: 200 16px/1.5 "Helvetica Neue", Helvetica, Arial, sans-serif;	   font: 200 16px/1.5 "Helvetica Neue", Helvetica, Arial, sans-serif;
+   width: 1090px;
+   height:731px;
+   margin:0cm;
+  
 }
 
+#blue{
+  height: 300px;
+  width: 100%;
+  background: linear-gradient(#1c5380, #06365f);
+}
 
-header{
+.logo{
+  float:right;
   position: relative;
-  background-color:#1c5380;
-  height:320px;
-  width:1280px;
-} 
+  top: 120px;
+  right: 300px;
+ }
 
-section img{
-  position:absolute;
-  left:180px;
-  top:80px;
+.home{
+  float:right;
+  position: relative;
+  
+  right:-180px;
+  width:100px;
+  top: 140px;
+  color:white;
+  background: linear-gradient(#5d7a9c, #426283);
+  border-radius: 4px;
 }
 
-aside img{
-  position:absolute;
-  top:260px;
-  left:580px;
-}
-article img{
-  position:absolute;
-    top:150px;
-    left:580px;
-  }
+.phones{
+  position: absolute;
+  bottom:100px;
+  left:100px;
 
-  h3{
-    position:absolute;
-    font-size:26px;
-    font-family:arial;
-    top:250px;
-    left:620px;
-    color: #06365f;
-    width:320px;
 }
 
-  p{
-    position:relative;
-    left:600px;
-    width:400px;
-  }
+.contenido{
+  background-repeat: no-repeat;
+  background-image: url("../images/frame.png");
+  width:500px;
+  position: absolute;
+  left:470px;
+  top:220px;
+  padding-left: 1cm;
+}
 
+.titulo {
+  width: 250px;
+  padding-top: .3cm;
+  font-size: 16;
+  font-family:Arial, Helvetica, sans-serif;
+  color: #06365f;
+}
+
+.texto{
+  width:420px;
+  font-family: Arial;
+  color:grey;
+
+}
+
+.badges{
+  display: flex;
+  justify-content: space-between;
+  width:335px;
+}
+
+.footer{
+font-size: 9px;
+height:200px;
+display:flex;
+justify-content: space-around;
+padding-top:200px;
+padding-left: 240px;
+padding-right:280px;
+align-items:flex-end;
+color:#5d7a9c;
+}
+
+.©{
+  color:grey;
+}
   
